--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,10 +3,7 @@ name: Node.js CI
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master
+      - github-actions-test
 
 jobs:
   build:
